# adaptive6-takehome

./: .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml
log_analytics/: __init__.py  __main__.py  parser.py  pipeline.py  types.py
tests/: conftest.py  test_analyze.py  test_parser.py  test_pipeline.py
